--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,8 +17,8 @@
 
       <ImageButton
           android:id="@+id/decreaseTeam1"
-          android:layout_width="70dp"
-          android:layout_height="wrap_content"
+          android:layout_width="@dimen/button_size"
+          android:layout_height="@dimen/button_size"
           android:layout_alignParentLeft="true"
           android:layout_alignParentStart="true"
           android:layout_centerVertical="true"
@@ -38,8 +38,8 @@
 
       <ImageButton
           android:id="@+id/increaseTeam1"
-          android:layout_width="70dp"
-          android:layout_height="wrap_content"
+          android:layout_width="@dimen/button_size"
+          android:layout_height="@dimen/button_size"
           android:layout_alignParentRight="true"
           android:layout_alignParentEnd="true"
           android:layout_centerVertical="true"
@@ -68,8 +68,8 @@
 
         <ImageButton
             android:id="@+id/decreaseTeam2"
-            android:layout_width="70dp"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/button_size"
+            android:layout_height="@dimen/button_size"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
@@ -89,8 +89,8 @@
 
         <ImageButton
             android:id="@+id/increaseTeam2"
-            android:layout_width="70dp"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/button_size"
+            android:layout_height="@dimen/button_size"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
